# recursion-schemes

./: LICENSE  README.md  recursion-schemes.cabal
app/: Main.hs
src/: Lib.hs
test/: Spec.hs
