name: recursion-schemes
version: 0.1.0.0
license: BSD3
author: CristhianMotoche
maintainer: cristhian.motoche@gmail.com
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
      Lib
  build-depends:
    base >= 4.7 && < 5
  default-language:
    Haskell2010

test-suite recursion-schemes-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      base
    , recursion-schemes
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

executable recursion-schemes-exe
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , recursion-schemes
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/CristhianMotoche/recursion-schemes
